<resources>
    <string name="app_name">Mi Tienda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Inicio</string>
    <string name="sales">Ventas</string>
    <string name="store">Almacén</string>
    <string name="new_sale">Registrar venta</string>
    <string name="new_supply">Agregar a Stock</string>
    <string name="in_cash">En caja: $ %s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="new_sale_ok">Venta registrada!</string>
    <string name="valor_total">Valor total</string>
    <string name="code">Código</string>
    <string name="name">Nombre</string>
    <string name="amount">Cantidad</string>
    <string name="precio_por_unidad">Costo por unidad</string>
    <string name="add">Agregar</string>
    <string name="edit">Editar</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="confirm_sale">¿Desea registrar la venta?</string>
    <string name="sale_total">Total venta</string>
    <string name="cancel_sale">Se ha cancelado la venta</string>
    <string name="empty_sale">Debe escoger al menos un producto</string>

    <array name="spinner_list_item_array">
        <item>Día</item>
        <item>Mes</item>
        <item>Año</item>
    </array>
</resources>
